--- a/css/style.css
+++ b/css/style.css
@@ -131,23 +131,23 @@ a {
 
 .button a {
     display: inline-block;
-    margin: 1rem;
-    padding: 1.2rem 2.4rem;
+    margin-top: 2rem;
+    padding: 1.5rem 2.4rem;
     font-size: 1.6rem;
     border: none;
-    font-weight: 800;
+    font-weight: 700;
     color: var(--white-color);
     background-color: var(--btn-color);
-    transition: .5s linear;
+    transition: .3s linear;
     border-radius: 2rem 0 2rem 0;
     -webkit-border-radius: 2rem 0 2rem 0;
     -moz-border-radius: 2rem 0 2rem 0;
     -ms-border-radius: 2rem 0 2rem 0;
     -o-border-radius: 2rem 0 2rem 0;
-    -webkit-transition: .5s linear;
-    -moz-transition: .5s linear;
-    -ms-transition: .5s linear;
-    -o-transition: .5s linear;
+    -webkit-transition: .3s linear;
+    -moz-transition: .3s linear;
+    -ms-transition: .3s linear;
+    -o-transition: .3s linear;
 }
 
 .button a:hover {
@@ -378,14 +378,15 @@ a {
     .hero-subheading {
         font-size: 1.6rem;
         color: var(--btn-color);
-        margin-bottom: 1rem;
+        margin-bottom: .2rem;
         font-weight: 600;
     }
 
     .hero-heading {
         margin: 1rem;
         font-size: 6.8rem;
-        background: linear-gradient(270deg, #0000ff 30%, #f002c8 70%);
+        background: linear-gradient(to right, #e8198b 0%, #4c01fa 100%);
+        /* background: linear-gradient(270deg, #0000ff 30%, #f002c8 70%); */
         background-clip: text;
         color: transparent;
     }
@@ -474,6 +475,9 @@ a {
         -moz-border-radius: 5rem;
         -ms-border-radius: 5rem;
         -o-border-radius: 5rem;
+    }
+    .button-register a:hover{
+        background-color: rgb(0, 196, 26);
     }
 }
 
